almost done with section 8

--- a/results.tex
+++ b/results.tex
@@ -30,37 +30,29 @@
 
 \section{Results and Analysis}
 
-Using the data, parameters, and procedures just described, we considered two different hazard models based on whether we use the five distinct seismic hazard regions or the whole area of interest as a uniform seismic hazard region. We call these the R and U models, respectively. Using these models we obtained hazard curves and expected PGA values for two probabilities of exceedance, at 2 and 10 percent in 50 years for events exceeding magnitudes \myrevision{$M_w \geq 4.5$}. These probabilities correspond to return periods of 475 and 2475 years. For nomenclature purposes, we use the probabilities as a suffix on the model type. As an example, we refer to the results for 2 percent probability of exceedance in 50 years using the five-regions model as the R2, whereas for the case of 10 percent probability of exceedance when using the uniform model we use the tag name U10.
+Using the data, parameters, and procedures just described, we considered two different hazard models based on whether we use the five distinct seismic hazard regions or the whole area of interest as a uniform seismic hazard region. We call these the R and U models, respectively. Using these models we obtained hazard curves and expected PGA values for two probabilities of exceedance, at 2 and 10 percent in 50 years for events exceeding magnitudes \myrevision{$M_w \geq 4.5$}. These probabilities correspond to return periods of 475 and 2,475 years. For nomenclature purposes, we use the probabilities as a suffix on the model type. As an example, we refer to the results for 2 percent probability of exceedance in 50 years using the five-regions model as R2, whereas for the case of 10 percent probability of exceedance when using the uniform model we use the tag name U10.
 
-Our choice for the threshold magnitude is based on the assumption that at the local scale (where a point of interest is close to the source), the hazard will be controlled by events \myrevision{$M_w \geq 4.5$}, or conversely, \myrevision{$M_{min}$ was chosen based on the expected smallest magnitude capable of causing damage}. In turn, the 2 and 10 percent probability of exceedance in a \myrevision{50-year} span are considered a standard practice in seismic design, and are the probabilities used in the Iranian building code \citep{BHRC2014}.
+Our choice for the threshold magnitude is based on the assumption that at the local scale (where a point of interest is close to the source), the hazard will be controlled by events \myrevision{$M_w \geq 4.5$}, or conversely, \myrevision{$M_{\min}$ was chosen based on the expected smallest magnitude capable of causing damage}. In turn, the 2 and 10 percent probability of exceedance in a \myrevision{50-year} span are considered a standard practice in seismic design, and are the probabilities used in the Iranian building code \citep{BHRC2014}.
 
 In the R models, we computed the probability of exceedance of the ground motion separately for each region and then added their exceedance rates at a given level of ground motion in order to have the contribution of all regions for any given grid point within the region of interest. The results are obtained in the form of annual rate of exceedance. Expected PGA values are therefore a ``slice'' of the actual hazard curves cut across all grid points for a chosen exceedance rate.
 
-Fig.~\ref{fig:pga} shows the expected mean PGA values obtained \myrevision{as the first and the second branch of the logic tree approach} for the different models, R2, R10, U2 and U10. As can be expected, the highest PGA values are associated with the R2 and U2 models, and the lowest with the R10 and U10 models. For the R model results shown in Fig.~\ref{fig:pga}a, the highest levels of expected ground motion occur in the Azerbaijan region at the left side of the North Tabriz Fault and also in border of Kopeh Dagh and Alborz tectonic seismic regions at the right side of the North Alborz Fault. We observe higher hazard in the Alborz region an small area at right side of the Mosha Fault. For the U model results shown in Fig.~\ref{fig:pga}b, on the other hand, the highest levels of expected ground motion are observed precisely in the area corresponding to the Azerbaijan seismic region, especially in the vicinity of the North Tabriz Fault system (see Fig.~\ref{fig:selected} for reference).
+Figure~\ref{fig:pga} shows the expected mean PGA values obtained for the R and U models, \myrevision{included the associated uncertainties in $b$, $M_{\max}$ and the GMPE. That is, the results in Fig.~\ref{fig:pga} correspond to the complete regional and uniform model branches in the logic tree for the different sub-models R2, R10, U2 and U10}. As can be expected, the highest PGA values are associated with the R2 and U2 models, and the lowest with the R10 and U10 models. For the R model results shown in Fig.~\ref{fig:pga}a, the highest levels of expected ground motion occur in the Azerbaijan region \myrevision{on the west side of the North Tabriz Fault and also on and around the border of the Kopeh Dagh and Alborz tectonic seismic regions on the east side of the North Alborz Fault. We also observe higher hazard in the Alborz region in a small area east from the Mosha Fault. On the other hand, the results shown in Fig.~\ref{fig:pga}b for the U model indicate that in addition to these areas, there are also large expected ground motions in the Zagros seismic zone and increased PGA results in various areas within the Central East seismic region}.
 
-In general, the U models exhibit higher levels of expected ground motions when compared to their corresponding R models. This is illustrated in Fig.~\ref{fig:pga.diff}, which shows the difference between both models, U--R (U minus R). In this figure, positive values indicate that the U models have larger mean PGA values than the R models. As it can be seen, this is true practically throughout the whole region at very low levels, and in particular in the north-west region at a moderate level of up to 0.2 g and more predominantly in the Zagros at levels of about 0.2 to 0.45 g. The higher results in uniform model occurred because of higher $M_{max}$ and lover $b-value$ in comparison with regional model.
+In general, the U models exhibit higher levels of expected ground motions when compared to their corresponding R models. This is illustrated in Fig.~\ref{fig:pga.diff}, which shows the difference between both models, U--R (U minus R). In this figure, positive values indicate that the U models have larger mean PGA values than the R models. \myrevision{As it can be seen, this is true practically throughout the whole region at very low levels, but more predominantly in the north-west region at a moderate level of up to 0.2 g and increasingly so in the Zagros region, where the differences between about 0.2 and 0.45 g. The higher results in the U model occurred because of higher $M_{max}$ and lower $b$ values in comparison with the R model}.
 
-Overall, these results are consistent with the seismicity observed in Fig.~\ref{fig:catalog}. The R model results, however, seem to be more sensitive to the influence of large magnitude events observed in both the historical and modern seismicity maps, with \myrevision{a} concentration of strong earthquakes in the Azerbaijan and Kopeh Dagh regions; whereas the U model results seem to be more sensitive to the influence of low-to-moderate magnitude events, especially in the Azerbaijan region. This is because of the higher $b$-value obtained for the Azerbaijan region in the R model as opposed to the lower value for the U model.
+Overall, these results are consistent with the seismicity observed in Fig.~\ref{fig:catalog}. The R model results, however, seem to be more sensitive to the influence of large magnitude events observed in both the historical and modern seismicity maps, with a concentration of strong earthquakes in the Azerbaijan and Kopeh Dagh regios; whereas the U model results seem to be more sensitive to the influence of low-to-moderate magnitude events, especially in the Zagros and Central East regions.
 
-With this in mind, we make the following additional consideration. No one model (R or U) can be considered uniquely correct. Both carry a certain level of epistemic uncertainty. A means to address this is to use combinations of different models to incorporate information from all possible models.  Here we also computed the expected levels of ground motion for a combination of the R and U models which is the final result of the logic tree approach as shown at ~\ref{fig:logic}. We refer to this as the (R,U) model. The results of this combined model are shown in Fig.~\ref{fig:pga.ru.std} in the form of expected mean PGA values.
+\myrevision{With this in mind, and knowing that no one model (R or U) can be considered uniquely correct, we consider now the combination of both models as presented for the complete logic tree in Fig.~\ref{fig:logic}. We refer to this as the (R,U) model and the results are shown in Fig.~\ref{fig:pga.ru.std}, again in the form of expected mean PGA values for 2 and 10 percent in 50 years.}
 
-As it can be seen in Fig.~\ref{fig:pga.ru.std}, the combined (R,U) model follows more closely the distribution of the region's seismicity shown in Fig.~\ref{fig:catalog} as well as the major faults shown in Fig.~\ref{fig:selected}a. It displays well the contribution of the North Tabriz Fault system in the Azerbaijan region as well as the contribution of the North Alborz fault in the Alborz region and that of the different faults in the Kopeh Dagh region. In Fig.~\ref{fig:pga.ru.std}, the highest PGAs are observed in the (R,U)2 model results, where the expected accelerations are of the order of 1.0 g to the northwest of \myrevision{the} city of Tabriz. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects or other related conditions which may often contribute to mitigating peak accelerations.
+\myrevision{The combined (R,U) model reflects the distribution of the region's seismicity shown in Fig.~\ref{fig:catalog} as well as that of the major faults shown in Fig.~\ref{fig:selected}a, but it also reflects the influence that small earthquakes have on the seismicity hazard of the region}. It displays well the contribution of the North Tabriz Fault system in the Azerbaijan region as well as the contribution of the North Alborz fault in the Alborz region and that of the different faults in the Kopeh Dagh region. In Fig.~\ref{fig:pga.ru.std}, the highest PGAs are observed in the (R,U)2 model results, where the expected accelerations are of the order of 1.0 g to the northwest of \myrevision{the} city of Tabriz. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects or other related conditions which may often contribute to mitigating peak accelerations.
 
-\myrevision{%
-We also note that the overall distribution of mean PGA pattern agrees with the recent study by \citet{Khodaverdian_2016_BSSA}. However, in general, their results are slightly lower than this study. They provided a rough estimate of the PGA, and the seismicity parameters, like completeness magnitude, the catalog, $M_{max}$, and $b-value$ are different in these two studies.  Consequently, we don't expect to match the results. For example  in case of $b-value$, in the same study region, \citet{Khodaverdian_2016_BSSA} reported very high variation of $b-value$ (0.56 - 1.27).  56\% of grid points have $b-value > 1$ and 53 \% of them are greater than 1.1.  Where in this study the $b-value$ has a narrow range of variation (0.93-1.15).  They computed the seismicity parameters for each grid point inside a circle with radius of 200 around the grid point, whereas in this study we considered a uniform seismicity parameters for each region. These estimates also agree, on average, with other studies. For the Azerbaijan tectonic seismic region for the city of Uremia, we found 0.24 g which is slightly lower than \citet{BHRC2014} and \citet{Zare2012} and higher than \citet{Khodaverdian_2016_BSSA} for 10 \% probability of exceedance in 50 years.  \citet{Zare2012} expected to see higher values because of using parametric method. For a 2\% probability of exceedance in 50 years, \citet{Golara2014} expected acceleration on the order of 0.3 - 0.5 g, where or mean value is 0.38 g. For the city of Tabriz, the results match with \citet{BHRC2014} and are in the range of \citet{Zare2012} for 10 \% probability of exceedance in 50 years.  \citet{Vafaie2011} expected accelerations on the order of 0.30--0.90 and 0.20--0.65 g for 2 and 10\% probability of exceedance in 50 years, respectively, where our mean values are about 0.61 and 0.35 g for the same corresponding probabilities. For the city of Ardabil, we found 0.73 g and 0.43 g for 2 and 10\% probability of exceedance in 50 years.  Our results are slightly higher than \citet{BHRC2014}, however, for 10\% probability of exceedance in 50 years, the results are in the range reported by \citet{Zare2012}. For 2\% probability of exceedance in 50 years, our results are very close to \citet{Golara2014} and \citet{Khodaverdian_2016_BSSA}. In the Alborz tectonic seismic region for the city of Rasht, our results are in a well agreement with the recent study of \citet{Abdollahzadeh2014}. For the city of Tehran, the results are in agreement with \citet{Abdi2013}, and slightly lower than  \citet{BHRC2014}, \citet{Zare2012}, and \citet{Golara2014} for 10\% probability of exceedance in 50 years. For 2\% 10\% probability of exceedance in 50 years, our results are lower than \citet{Golara2014} and higher than \citet{Khodaverdian_2016_BSSA}. For the Kopeh Dagh tectonic seismic region for the city of Mashhad, results are lower than \citet{BHRC2014} and higher than \citet{Khodaverdian_2016_BSSA}.}
+\myrevision{We also note that the overall distribution of mean PGA agrees with the recent study by \citet{Khodaverdian_2016_BSSA}. However, their results are in general slightly lower than ours. Obviously, given the differences in the catalogs, completeness magnitude, and in the seismicity parameters $M_{\max}$ and $b$, we cannot expect PGA values to match. For example, in the case of the $b$ values, \citet{Khodaverdian_2016_BSSA} reported large variations netween 0.56 and 1.27, where over 50 percent of the grid points had $b$ values greater than 1; whereas in our study the $b$ values observe a narrow range of variation between 0.93 and 1.15. In this regard we should note that \citet{Khodaverdian_2016_BSSA} computed the seismicity parameters for each grid point considering the contributions within a circular area of radius 200 m, whereas we considered a uniform seismicity parameters for each region and account for the uncertainty in the difference between regions via the combination of the R and U models.}
 
+\myrevision{Altogether, on average, we found our results to be in good agreement with other previous results. For the city of Uremia, for instance, we obtained a expected PGA of 0.24 g, which is slightly lower than values obtained by \citet{BHRC2014} and \citet{Zare2012} and higher than \citet{Khodaverdian_2016_BSSA} for a 10 percent probability of exceedance in 50 years. We believe \citet{Zare2012} obtained higher values because their of use of a parametric method. For a 2 percent probability of exceedance in 50 years, \citet{Golara2014} obtained expected PGAs on the order of 0.3--0.5 g, where our mean value is 0.38 g. For the city of Tabriz, our results match with those obtained by \citet{BHRC2014} and are within the range of values computed by \citet{Zare2012}, for a 10 percent probability. These and other similar comparisons are summarized in Table \ref{tab:pga}, where we show our results and those of other previous studies for selected cities in northern Iran.}
 
-%We also note that the overall distribution of mean PGA  agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA (10\% in 50 years) values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, where we find equivalent values to be between 0.35 and 0.50 g in the (R,U)10 model. Similarly, for the particular case of the city of Tabriz, \citet{Vafaie2011} obtained slightly higher expected accelerations on the order of 0.30--0.90 and 0.20--0.65 g for 2 and 10\% \myrevision{in 50 years}, respectively, where our mean values are about 0.53 and 0.36 g for the same corresponding probabilities. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 g for Tehran, where we found equivalent results to be about 0.25--0.35 g for a 10\% probability of exceedance \myrevision{in 50 years}. The latter estimate is in good agreement with \citet{Abdi2013}, who predicts PGA values in the vicinity of Karaj and Tehran to be on the order of 0.27--0.31 g for \myrevision{the same exceedance probability}. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also on the same order of those shown in Fig.~\ref{fig:pga.ru.std}. Finally, for the city of Bojnurd in the northeast province of Khorasan in the Kopeh Dagh seismic region, \citet{Rahgozar2012} reports expected PGA values in the ranges of 0.28--0.49 and 0.15--0.22 g for 2 and 10\% \myrevision{in 50 years}, where we obtain mean values of 0.51 and 0.34 g, respectively.
+\myrevision{As mentioned before, overall, our results are close to or within the ranges provided by most previous studies}. The only noticeable exceptions are the results of \citet{Golara2014}, whose expected PGA values are significantly higher than the rest. \myrevision{One possible explanation for the higher values in \citet{Golara2014} is their use of the maximum credible earthquake as the value for $M_{\max}$. The maximum credible earthquake is the largest earthquake that appears capable of occurring under the known tectonic framework for a specific fault or seismic source, based on geologic and seismic data. Therefore, it is often higher than historical documented observations or instrumental data-driven estimations of $M_{\max}$}.
 
-Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of other previous studies for selected cities in northern Iran. As mentioned before, overall, our results are close \myrevision{to} or within the ranges from most studies. The only noticeable exceptions are the results of \citet{Golara2014}, whose expected PGA values are significantly higher than the rest. \myrevision{One reason for higher value in \citet{Golara2014} is using the maximum credible earthquake as $M_max$. The maximum credible earthquake is largest earthquake that appears capable of occurring under the known tectonic framework for a specific fault or seismic source, as based on geologic and seismologic data, so it is higher than observation or data driven $M_{max}$.}
-
-% ***
-
-% Although not included here, we also computed expected PGA values for a magnitude threshold $M_w$ 4.5. In that case, our results are closer to those of \citet{Golara2014}, but deviate from the rest. In general, the smoothed seismicity method tends to lead to lower hazard estimations than those obtained using specific fault definitions (as opposed to point sources) where the concept of a threshold becomes unnecessary and the hazard, and thus is sensitive to the appropriate selection of the magnitude threshold.
-
-% ***
-
-Following the comparisons shown in Table \ref{tab:pga}, we looked into the more complete picture of the annual probabilities of exceedance as functions of PGA\myrevision{, also known as hazard curve}. The results are shown in Fig.~\ref{fig:hazardcurve} for six of the main cities in northern Iran considering the two basic R and U models and the combined (R,U) model. These hazard curves exemplify again the differences between the R and U models, which are more prominent in the northwest cities of Tabriz and Ardabil, where the U models yield higher expected values of PGA for any given annual probability of exceedance. Minor differences are also present in the results of the central cities of Karaj and Tehran, whereas for the cities of Urmia and Mashhad in the Zagros and Kopeh Dagh seismic zones, the R and U models yield similar if not equivalent hazard estimates. This is consistent with our previous observations regarding Figs.~\ref{fig:pga}, \ref{fig:pga.diff} and \ref{fig:pga.ru.std}.
+Following the comparisons shown in Table \ref{tab:pga}, we looked into the more complete picture of the annual probabilities of exceedance as functions of PGA\myrevision{, also known as hazard curves. The results are shown in Fig.~\ref{fig:hazardcurve} for six of the main cities in northern Iran including the R, U, and the combined (R,U) models. Although for these particular cities, the differences are minor in general, they exemplify the results one can obtain at particular locations. Here, the more clear differences are observed for the city of Urmia, where the (R,U) model approaches the R model for low values of PGA and then evolves closer to the U model for higher values of PGA}.
 
 \begin{figure}[t]
     \centering
@@ -69,5 +61,6 @@ Following the comparisons shown in Table \ref{tab:pga}, we looked into the more 
     \label{fig:tehran}
 \end{figure}
 
-\myrevision{%
-Last, we put additional attention on the results for the capital city of Tehran. We compare hazard curves obtained in this study against those computed by \citet{Ghodrati2003} and \citet{Boostan2015} as well as ranges from other studies for 2 and 10\% probability of exceedance in 50 years. By applying different combination of magnitude (M) and distance (R), \citet{Boostan2015} presented a new model for probabilistic seismic hazard assessment based on fuzzy sets theory for Tehran, Iran. They expected to achieve higher seismic hazard values because of considering a vast uncertainty range for R and M. They concluded, non-fuzzy approaches due to not considering all uncertainties leads to non-conservative results. \citet{Ghodrati2003} conducted a probabilistic seismic hazard analysis for the same region based on considering the uncertainty in seismicity value and ground motion level through logic tree approach. They consider the uncertainty in seismicity parameters by involving the results of \citet{Tavakoli1999}. \citet{Tavakoli1999} reported the $b-value$ and $M_{max}$ as $0.52\pm0.02$ and $7.9\pm0.3$, respectively, which is fairly different from the result of this study. Even though   \citet{Ghodrati2003} used three GMPEs model,  \citet{Boostan2015} used only one model as attenuation relationship. As we discussed earlier, our model fairly well consider the ground motion level uncertainty.  Our results are similar to those obtained by \citet{Boostan2015} in the range between 0.1 and 0.3 g (corresponding to annual probabilities of exceedance between $10^{-3}$ and $10^{-1}$), and then it is in the mean range of the mentioned studies.  Conversely, the trend in the hazard curve from \citet{Boostan2015} suggest the city is to expect significantly higher levels of ground motion at higher probability rates, which is contrary to our findings and those of \citet{Ghodrati2003}. Expected PGA range of other studies mentioned at the \ref{tab:pga}, represents, on average, our study presents trustable results. The shaded area, represents the upper and lower value of uncertainty at the GMPEs. In other word the upper part edge is calculated by just considering GMPEs+Unc  and the lower edge is calculated by just considering GMPEs-Unc. It perfectly represents that almost all studies are in the range of uncertainty of the GMPEs, and using one appropriate backbone GMPE as well as the uncertainties could have better role in considering the epistemic uncertainty than using multiple GMPEs as \citet{Atkinson2014} concluded.}
+*** DONE UP TO HERE ***
+
+\myrevision{Last, we concentrate our attention on the results for the capital city of Tehran. We compare hazard curves obtained in this study against those computed by \citet{Ghodrati2003} and \citet{Boostan2015} as well as ranges from other studies for 2 and 10\% probability of exceedance in 50 years. By applying different combination of magnitude (M) and distance (R), \citet{Boostan2015} presented a new model for probabilistic seismic hazard assessment based on fuzzy sets theory for Tehran, Iran. They expected to achieve higher seismic hazard values because of considering a vast uncertainty range for R and M. They concluded, non-fuzzy approaches due to not considering all uncertainties leads to non-conservative results. \citet{Ghodrati2003} conducted a probabilistic seismic hazard analysis for the same region based on considering the uncertainty in seismicity value and ground motion level through logic tree approach. They consider the uncertainty in seismicity parameters by involving the results of \citet{Tavakoli1999}. \citet{Tavakoli1999} reported the $b-value$ and $M_{max}$ as $0.52\pm0.02$ and $7.9\pm0.3$, respectively, which is fairly different from the result of this study. Even though   \citet{Ghodrati2003} used three GMPEs model,  \citet{Boostan2015} used only one model as attenuation relationship. As we discussed earlier, our model fairly well consider the ground motion level uncertainty.  Our results are similar to those obtained by \citet{Boostan2015} in the range between 0.1 and 0.3 g (corresponding to annual probabilities of exceedance between $10^{-3}$ and $10^{-1}$), and then it is in the mean range of the mentioned studies.  Conversely, the trend in the hazard curve from \citet{Boostan2015} suggest the city is to expect significantly higher levels of ground motion at higher probability rates, which is contrary to our findings and those of \citet{Ghodrati2003}. Expected PGA range of other studies mentioned at the \ref{tab:pga}, represents, on average, our study presents trustable results. The shaded area, represents the upper and lower value of uncertainty at the GMPEs. In other word the upper part edge is calculated by just considering GMPEs+Unc  and the lower edge is calculated by just considering GMPEs-Unc. It perfectly represents that almost all studies are in the range of uncertainty of the GMPEs, and using one appropriate backbone GMPE as well as the uncertainties could have better role in considering the epistemic uncertainty than using multiple GMPEs as \citet{Atkinson2014} concluded.}
