done with results section

--- a/attenuation.tex
+++ b/attenuation.tex
@@ -1,7 +1,7 @@
 
 \begin{figure*}[t]
     \centering
-    \includegraphics[width=\textwidth]{figures/pdf/figure-08}
+    \includegraphics[width=0.8\textwidth]{figures/pdf/figure-08}
     \caption{Variation of horizontal peak ground acceleration (PGA) with distance. KG2004: \citet{Kalkan2004}, BA2008: \citet{Boore2008}, AB2010: \citet{Akkar2010}, SO2012: \citet{Soghrat2012}. The dashed line are $\pm$uncertainty of KG2004.}
     \label{fig:att}
 \end{figure*}
