--- a/results.tex
+++ b/results.tex
@@ -57,10 +57,18 @@ Following the comparisons shown in Table \ref{tab:pga}, we looked into the more 
 \begin{figure}[t]
     \centering
     \includegraphics[width=0.48\textwidth]{figures/pdf/figure-14}
-    \caption{Hazard curve comparison between the models considered in this study and the results of two previous studies by \citet{Ghodrati2003} and \citet{Boostan2015} for the city of Tehran. Here, the two previous studies just mentioned are identified with the codes Gh03 and Bo15, respectively. Also the PGA ranges of the \ref{tab:pga} are represented. The shaded area represents the upper and lower value of uncertainty at the GMPEs.}
+    \caption{Hazard curve comparison between the models considered in this study and the results of \citet{Ghodrati2003} and \citet{Boostan2015}, along with the value-ranges of other studies included in Table \ref{tab:pga} for the city of Tehran, for 2 and 10 percent probability of exceedance in 50 years, as indicated by the circles over the fixed annual probability lines. As done before, the following codes are used for the references of two mentioned hazard curves and the values of other studies.
+        Gh03: \citet{Ghodrati2003},
+        Za12: \citet{Zare2012},
+        Ab13: \citet{Abdi2013},
+        BC14: \citet{BHRC2014},
+        Go14: \citet{Golara2014},
+        Bo15: \citet{Boostan2015}, and
+        Kh16: \citet{Khodaverdian_2016_BSSA}.
+    The shaded area represents the upper and lower results obtained when considering the uncertainty in the backbone GMPE.}
     \label{fig:tehran}
 \end{figure}
 
-*** DONE UP TO HERE ***
+\myrevision{Last, we concentrate our attention on the results for the capital city of Tehran. We compare the hazard curve we obtained for Tehran with those computed by \citet{Ghodrati2003} and \citet{Boostan2015}. The hazard curve from \citet{Boostan2015} is the result of applying fuzzy sets theory to account for variations in the distance and magnitude of earthquakes. \citet{Ghodrati2003}, on the other hand, conducted a probabilistic seismic hazard analysis considering the uncertainty in the seismicity values and the ground motion levels of intensity through a logic tree approach. In particular, \citet{Ghodrati2003} used variations in $b$ and $M_{\max}$ based on the previous results of  \citet{Tavakoli1999}, where $b = 0.52 \pm0.02$ and $M_{\max} = 7.9 \pm 0.3$. This value of $M_{\max}$ is similar to ours for the region of Alborz, but the $b$ value is rather low. While \citet{Ghodrati2003} used three different attenuation relationships in their analysis, \citet{Boostan2015} used only one. The results of the comparison are shown in Fig.~\ref{fig:tehran}. This figure also includes comparisons with the value-ranges of other studies included in Table \ref{tab:pga} for 2 and 10 percent probability of exceedance in 50 years.}
 
-\myrevision{Last, we concentrate our attention on the results for the capital city of Tehran. We compare hazard curves obtained in this study against those computed by \citet{Ghodrati2003} and \citet{Boostan2015} as well as ranges from other studies for 2 and 10\% probability of exceedance in 50 years. By applying different combination of magnitude (M) and distance (R), \citet{Boostan2015} presented a new model for probabilistic seismic hazard assessment based on fuzzy sets theory for Tehran, Iran. They expected to achieve higher seismic hazard values because of considering a vast uncertainty range for R and M. They concluded, non-fuzzy approaches due to not considering all uncertainties leads to non-conservative results. \citet{Ghodrati2003} conducted a probabilistic seismic hazard analysis for the same region based on considering the uncertainty in seismicity value and ground motion level through logic tree approach. They consider the uncertainty in seismicity parameters by involving the results of \citet{Tavakoli1999}. \citet{Tavakoli1999} reported the $b-value$ and $M_{max}$ as $0.52\pm0.02$ and $7.9\pm0.3$, respectively, which is fairly different from the result of this study. Even though   \citet{Ghodrati2003} used three GMPEs model,  \citet{Boostan2015} used only one model as attenuation relationship. As we discussed earlier, our model fairly well consider the ground motion level uncertainty.  Our results are similar to those obtained by \citet{Boostan2015} in the range between 0.1 and 0.3 g (corresponding to annual probabilities of exceedance between $10^{-3}$ and $10^{-1}$), and then it is in the mean range of the mentioned studies.  Conversely, the trend in the hazard curve from \citet{Boostan2015} suggest the city is to expect significantly higher levels of ground motion at higher probability rates, which is contrary to our findings and those of \citet{Ghodrati2003}. Expected PGA range of other studies mentioned at the \ref{tab:pga}, represents, on average, our study presents trustable results. The shaded area, represents the upper and lower value of uncertainty at the GMPEs. In other word the upper part edge is calculated by just considering GMPEs+Unc  and the lower edge is calculated by just considering GMPEs-Unc. It perfectly represents that almost all studies are in the range of uncertainty of the GMPEs, and using one appropriate backbone GMPE as well as the uncertainties could have better role in considering the epistemic uncertainty than using multiple GMPEs as \citet{Atkinson2014} concluded.}
+\myrevision{As we discussed earlier, and as it can be seen based on the associated uncertainty carried by the GMPE (shaded area), our model accounts fairly well the expected ground motion level of variability. In general, for the city of Tehran, the mean results of our R, U and (R,U) models are very similar for all values. With respect to \citet{Ghodrati2003} and \citet{Boostan2015}, for PGA values lower than 0.25 g, which correspond to annual probabilities higher than $3 \times 10^{-3}$, our results are fairly close to those of \citet{Boostan2015}. However, at PGA values higher than 0.35 g and annual probabilities lower than $1 \times 10^{-3}$, our results fall halfway between the hazard curves of \citet{Ghodrati2003} and \citet{Boostan2015}. We also note that on average, our hazard curves are fairly centered with respect to the different discrete value-ranges of the other studies (reported in Table \ref{tab:pga} and indicated with empty-circle ranges in Fig.~\ref{fig:tehran}). We also note that all other results fall within the shaded area, which represents the upper and lower bounds of uncertainty in the GMPEs. In other words, results from all other studies are below and above our results for the GMPE+Unc.~and GMPE--Unc.~models in our logic tree analysis. This provides confidence in the approach followed here based on a centered backbone GMPE and the ideas put forward by \citet{Atkinson2014}.}
