done with conclusions

--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,5 +1,4 @@
 
 \section{Concluding Remarks}
 
-We present results from a seismic hazard analysis for northern Iran based on a smoothed seismicity approach, including regional maps of expected peak ground accelerations for different seismic zonation models. In particular, we calculated the hazard for the region of interest using two basic models, a five-seismic zone regions model and a uniform seismic zone model. Our calculations yield results similar to those of other studies, \myrevision{however, provide different perspective of seismic hazard than previous hazard \myrevision{analyses} due to the usage of a more complete catalog and inclusion of low-magnitude events}. In our analysis we found it convenient to combine both the regional and uniform models as a \myrevision{means} to consider the epistemic uncertainty intrinsic to the subjective choice of models and seismic zones. Such a combination yielded hazard maps that adjusted better to the visual interpretation of the historical and instrumental seismicity observed in the region of interest, and to the location of known seismically active faults. While no one model can be deemed more appropriate than others, we believe our results constitute a positive contribution to the understanding of seismic hazard in the region, especially for rural areas that are not the subject of specialized hazard studies such as those conducted for major urban centers. Future work to improve the results presented here should consider \myrevision{other} ground motion parameters such as response spectral accelerations for different periods and site effects.
-
+We present results from a seismic hazard analysis for northern Iran based on a smoothed seismicity approach, including regional maps of expected peak ground accelerations for different seismic zonation models. In particular, we calculated the hazard for the region of interest using two basic models, a five-seismic zone regions model and a uniform seismic zone model, \myrevision{including uncertainty in the combination of both models, the seismic parameters, and the selection of a ground motion prediction equation via a logic tree approach. In general, our calculations yield results similar to those of other studies for the region of interest and the main cities in it. We, however, provide a more complete perspective to the problem of seismic hazard analysis for norther Iran than previous studies because our use of a more complete seismic catalog, which includes recent damaging events and low-magnitude earthquakes. In our analysis we found that the combination of the regional and uniform models not only allowed us to account for the uncertainty in seismic zonation but it led to a final hazard map that adjusted better to the visual interpretation of the historical and instrumental seismicity observed in the region of interest, the location of known seismically active faults, and the low-magnitude seismic activity in the region}. While no one model can be deemed more appropriate than others, we believe our results constitute a positive contribution to the understanding of seismic hazard in the region, especially for rural areas that are not the subject of specialized hazard studies such as those conducted for major urban centers. Future work to improve the results presented here should consider \myrevision{other ground motion measures of intensity} such as response spectral accelerations for different periods and site effects.
